--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "knex": "^0.20.10",
     "knex-cleaner": "^1.3.0",
     "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth2": "^0.2.0",
     "pg": "^7.18.1"
   },
   "devDependencies": {
