--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "knex-cleaner": "^1.3.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
-    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth2": "^0.2.0",
     "pg": "^7.18.1"
   },
